# tratsah

./: CMakeLists.txt  package.xml
config/: cartpole_controller.yaml  omni_base_controller_velocity.yaml
examples/: example_velocity.cpp
launch/: cartographer.launch.py  example_velocity.launch.py  gazebo.launch.py  gazebo_mapping.launch.py  gazebo_planar.launch.py  main.launch.py  main_planar.launch.py  map_saver.launch.py  mapping.launch.py  nav2.launch.py  planar.launch.py
map/: my_map.pgm
meshes/: red_box.dae
meshes/dae/: Cube.001.dae  Cube.016.dae  Cylinder.001.dae  Cylinder.002.dae  Torus.dae  bed.dae  blue_box.dae  green_box.dae  plant.dae  red_box.dae  trash_can.dae  visual.005.dae
param/: tratsah.yaml
rviz/: tratsah.rviz
scripts/: aruco_service.py  commander.py  controller.py  get_image.py  robot_navigator.py  subscriber_member_function.py  teleop_omni_joystick.py  teleop_omni_keyboard.py  teleop_planar_joystick.py  teleop_twist_joystick.py  teleop_twist_keyboard.py
src/: hello_world.cpp  subscriber_member_function.cpp
urdf/: gazebo.urdf.xacro  gazebo_planar.urdf.xacro  omni_tratsah.urdf  omni_tratsah.urdf.xacro  planar.urdf  planar_tratsah.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro  tratsah.urdf.xacro  wheel.urdf.xacro
worlds/: my_map.pgm  my_map.yaml  my_map_params.yaml  test.world  test2.world
xacro/: gazebo.urdf.xacro  husky_ref.urdf.xacro  intel_realsense.urdf.xacro  main.urdf.xacro  main_new.urdf.xacro  main_realsense.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro
